# DDDanceML

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.github/workflows/: ci.yml
ml-service/: requirements.txt  test_pipeline.py
ml-service/app/: main.py
ml-service/app/api/: deps.py
ml-service/app/api/routes/: dependencies.py  health.py  moderate.py  (+3 more)
ml-service/app/core/: config.py  exceptions.py  metrics.py  redis_client.py  s3.py
ml-service/app/domain/: attempt.py  comparison.py  dance.py
ml-service/app/models/: mixamo_model.json
ml-service/app/schemas/: compare.py  moderate.py  process.py  recommend.py  reels.py
ml-service/app/services/: compare.py  dance_features.py  downloader.py  json_results.py  keyframes.py  moderation.py  processing.py  recommender.py  reels_recommender.py  skeleton.py  skeleton_to_segments.py  video_to_json.py  video_to_mixamo.py  video_to_skeleton.py
ml-service/app/telegram_bot/: bot.py  handlers.py
ml-service/app/tests/: conftest.py  test_process.py
ml-service/app/worker/: celery_app.py  tasks.py
ml-service/blender_data/: character.blend
ml-service/model-server/: Dockerfile  requirements.txt  server.py
ml-service/test_output/: segments_vidos.json
ml-service/tests/: conftest.py  test_config.py  test_dance_features.py  test_domain.py
secrets/: README.md  instagram_cookies.txt  vk_cookies.txt  vk_cookiets.txt  youtube_cookies.txt
(+25 files in other folders)
